# orbit-video-player

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: comparison.wgsl  final_pass.wgsl  grayscale.wgsl  shader.wgsl  split_line.wgsl  upscale_v1.wgsl  video.wgsl  yuv_to_rgb.wgsl
lib/common/: Cargo.toml
lib/common/src/: error.rs  lib.rs  shader.rs
lib/core/: Cargo.toml
lib/core/src/video/: color_space.rs  decoder.rs  effect_chain.rs  mod.rs  pipeline.rs  pipeline_old.rs  primitive.rs  render_passes.rs  renderer.rs  shader.rs  shader_effect.rs  state.rs  stream.rs  texture_manager.rs
lib/core/src/video/pipeline/: line.rs  manager.rs  mod.rs  render.rs  state.rs  video.rs
lib/core/src/video/pipeline/effects/: comparison.rs  mod.rs  upscale.rs  yuv_to_rgb.rs
lib/ui/: Cargo.toml
lib/ui/src/components/player/: mod.rs
lib/ui/src/widgets/: mod.rs
lib/ui/src/widgets/video_player/: compariosn_slider.rs  comparison_line.rs  element.rs  icons.rs  mod.rs  theme.rs
src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
