[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "lib/common", "lib/core","lib/ui"]

[dependencies]
anyhow.workspace = true
iced.workspace = true
# LOCAL
nebula-ui.workspace = true

[workspace.dependencies]
anyhow = "1.0"
iced = {version="0.13.1", features = ["advanced"]}
iced_wgpu = "0.13.5"
wgpu = "23.0"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.4"
ffmpeg-next = "7.1"  
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.9"
# LOCAL
nebula-common = { path = "lib/common" }
nebula-core = { path = "lib/core" }
nebula-ui = { path = "lib/ui" }