[package]
name = "nebula"
version = "0.1.0"
edition = "2021"

[workspace]
members = [ "lib/common", "lib/core","lib/ui"]

[dependencies]
anyhow.workspace = true
iced.workspace = true
ffmpeg-next.workspace = true
winit.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
env_logger.workspace = true 
indexmap.workspace = true
# LOCAL
nebula-common.workspace = true
nebula-ui.workspace = true
nebula-core.workspace = true

[workspace.dependencies]
anyhow = "1.0"
env_logger = "0.10"
iced = {version="0.13.1", features = ["advanced"]}
iced_wgpu = "0.13.5"
wgpu = "23.0"
winit = "0.29"
bytemuck = { version = "1.21", features = ["derive"] }
pollster = "0.4"
ffmpeg-next = { version = "7.1" }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2.0.9"
tokio = { version = "1", features = ["full"] }
bon = "3.3.2"
# LOCAL
nebula-common = { path = "lib/common" }
nebula-core = { path = "lib/core" }
nebula-ui = { path = "lib/ui" }
indexmap = "2.0"