[package]
name = "nebula-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu.workspace = true
iced.workspace = true
iced_wgpu.workspace = true
ffmpeg-next.workspace = true
winit.workspace = true
tracing.workspace = true
anyhow.workspace = true
bon.workspace = true
bytemuck.workspace = true
# Local
nebula-common.workspace = true